# llm-foundry

./: .gitignore  Dockerfile  README.md  README_local_training.md  generate_sample.py  generate_text_example.py  local_llama_training.py  local_llama_training_instruct.py  pyproject.toml  setup.py  simple_train_smollm2.py  simple_train_smollm2_peft.py  test_llama.py  test_llama_team_align.py  test_llama_team_align_minimal_hf.py  test_registry.py  text_generation_callback.py
.github/workflows/: ruff.yml
docker_envs/: Dockerfile  requirements.txt
docs/: Quick Starts.md
llmfoundry/: __init__.py
llmfoundry/callbacks/: dataloader_speed.py  loss_perp_v_len_callback.py  packing_efficiency.py
llmfoundry/command_utils/: __init__.py  eval.py  train.py
llmfoundry/command_utils/data_prep/: convert_dataset_hf.py
llmfoundry/data/: data.py  sequence_packer.py  text_data.py
llmfoundry/data/finetuning/: tasks.py
llmfoundry/eval/: __init__.py
llmfoundry/eval/metrics/: __init__.py  math_verify.py  nlp.py
llmfoundry/loggers/: __init__.py  aim_remote_uploader.py  composer_aim_logger.py  file_logger_wrapper.py
llmfoundry/metrics/: __init__.py
llmfoundry/models/: __init__.py
llmfoundry/models/llama/: README.md  __init__.py  attention.py  composer_llama_adapter.py  config.py  custom_llama_model.py  custom_model.py  decoder.py  front_end.py  liger_rope.py  mlp.py  model.py  model_hf_register.py  register.py  rms_norm.py  rope.py  test_llama.bkp
llmfoundry/models/llama/bkp/: composer_llama_adapter.py  custom_llama_model.py  huggingface.py  in_context_learning_evaluation_bkp.py  llama3-1b-lora_bkp.yaml  local_llama_training.py  local_llama_training_up_to_eval_bkp.py  model.py  model2_bkp.py  model_hf_register.py  pyproject_remote.toml  test_llama.py  test_llama_bkp_code.py  test_llama_team_align.py  test_llama_team_align_minimal.py  test_llama_team_align_minimal_hf.py  todo.txt  train_with_custom_llama2.py  train_with_llama_adapter.py
llmfoundry/models/mpt/: modeling_mpt.py
llmfoundry/utils/: builders.py  config_utils.py
scripts/: .gitignore
scripts/data_prep/: convert_dataset_hf.py  convert_finemath.py  convert_tulu-3-sft-olmo-2-mixture.py  dataset_constants_split_config.py  download_repo.py  split_hf_datasets.py  tokenize_split.py
scripts/data_prep/preproc/: __init__.py  preprocs.py
scripts/eval/yamls/: hf_eval.yaml  llama3-2-1b-eval.yaml  smolLM2_tasks.yaml  smolLM2_tasks_light.yaml  smollm2-135m_eval.yaml  smollm2-135m_eval_gsm8k.yaml
scripts/inference/: convert_composer_to_hf.py  hf_generate.py
scripts/modal/: Dockerfile  LF_dora.py  LF_lora.py  README.md  composer-dora.py  composer-lora.py  hf-dora.py  hf-lora.py  modal.py  modal_script.py
scripts/train/: train_with_custom_llama.py  train_with_llama_adapter.py
scripts/train/custom_plugin/: model_registry.py
scripts/train/yamls/finetune/: TinyStories-33M_dora.yaml  TinyStories-33M_lora.yaml  TinyStories-33M_rslora.yaml  smollm2-135m.yaml  smollm2-135m_dora.yaml  smollm2-135m_fft.yaml  smollm2-135m_lora.yaml  smollm2-135m_lora_bf16.yaml  smollm2-135m_peft.yaml  smollm2-135m_rslora.yaml
scripts/train/yamls/llama/: llama3-1b-lora-instruct-full-ft.yaml  llama3-1b-lora-instruct.yaml  llama3-1b-lora.yaml  llama3-1b-lora2.yaml  llama3-1b-lora_fsdp.yaml  llama3-1b.yaml
scripts/train/yamls/pretrain/: custom_smollm2-135m.yaml  custom_smollm2-135m_peft.yaml  llama3.yaml  smollm2-135m-no-logger.yaml  smollm2-135m.yaml  smollm2-135m_lora_pretraining.yaml
tests/: test_mlm_masking.py  test_sequence_packer.py  test_utils.py
tests/fixtures/: models.py
tests/loggers/: conftest.py  test_aim_logger.py
tests/utils/: test_model_download_utils.py
